@@ -1,6 +1,7 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- EGPIO: address multiple ports by input & output command
 - SmartED: issue #293 fixed
   change savestatus from store to sd
   Add ecoscore system to drive report and web interface like defunct smart web app. (added by frantek)
